k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: appname
    app: appname
    namespace: default
  name: appname
  namespace: default
spec:
  strategy:
    type: RollingUpdate
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      app: appname
  template:
    metadata:
      labels:
        name: appname
        app: appname
        namespace: default
        sidecar.istio.io/inject: "istiosidecarval"
    spec:
      containers:
        - image: docker.io/istio-poc/appname
          imagePullPolicy: IfNotPresent
          name: appname
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              port: http
              path: /health
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              port: http
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
          startupProbe:
            httpGet:
              port: http
              path: /health
            failureThreshold: 30
            periodSeconds: 5
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 300m
              memory: 300Mi
